export enum CellOrientation {
    north = "north",
    west = "west",
    south = "south"
}
