export interface Floor {
    number: number;
    description: string;
    building?: string;
}